fixed sticky navbar & meet our team spacing issue
navigation bar is sticky and appears on scroll down
padding issue of meet-team solved (all boxes uniform

--- a/code/frontend/landingPage/landingPage.css
+++ b/code/frontend/landingPage/landingPage.css
@@ -16,7 +16,6 @@
     background-image: linear-gradient(315deg, #000000 0%, #110033 5%, #07075a 44%, #181887 72%, #342ecc 85%, #716aff 99%);
     background-position: center;
     background-size: cover;
-    height: 100vh;
 }
 
 /*navigation bar*/
@@ -415,8 +414,7 @@ input[type=text]{
 
 .meet-team{
     display: grid;
-    padding:30px;
-    padding-bottom: 8%;
+    padding:30px 30px 8% 80px;
     grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
     gap:10px;
     height:180px;
